testdata/invalid/internal/platform/common/common.go
package common

func Value() string {
	return "common"
}
